deployment/env-variable.yaml
# environment variable
# kubernetes juga mendukung env variable untuk Pod
# hal ini sangat berguna untuk konfigurasi aplikasi, seperti konfigurasi database, dan lain-lain

apiVersion: v1
kind: Pod
metadata:
  name: pod-name
  labels:
    label-key1: label-value1
spec:
  containers:
    - name: container-name
      image: image
      ports:
        - containerPort: 80
