deployment/config-map.yaml

apiVersion: v1
kind: Service
metadata:
  name: nodejs-env-service
  labels:
    service-name: nodejs-env-service
spec:
  selector:
    pod-name: nodejs-env
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
