deployment/downward-api.yaml
# create Service
apiVersion: v1
kind: Service
metadata:
  name: nodejs-env-service
spec:
  selector:
    name: nodejs-env
  type: NodePort
  ports:
    - port: 3000 # port dari Service yg akan dibuka
      targetPort: 3000 # akan diteruskan ke port Pod
      nodePort: 31001
