deployment/multi-container-pod.yaml
# create Service
apiVersion: v1
kind: Service
metadata:
  name: app-nodejs-service
  labels:
    service-name: app-nodejs-service
spec:
  type: ClusterIP
  selector: # Pod yg akan dimasukkan ke dalam Service
    pod-env: stagging
    pod-name: nginx
  ports:
    - port: 80 # Service membuka port 80
      targetPort: 80 # port 80 dari Service akan diteruskan ke port 80 dari Pod yg dimaintaine
      name: nginx
    - port: 3000 # Service akan membuka port 3000
      targetPort: 3000 # port 3000 dari Service akan diteruskan ke port 3000 dar Pod yg dimaintaine
      name: nodejs

---
# kubectl create -f multi-container-pod.yaml
