deployment/secret.yaml
# create Service
apiVersion: v1
kind: Service
metadata:
  name: nodejs-env
  labels:
    name: nodejs-env
spec:
  type: NodePort
  selector:
    name: nodejs-env # nama Pod yg akan ada di dalam Service ini
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 31001
