deployment/service-node-port.yaml
# node port

apiVersion: v1
kind: Service
metadata:
  name: service-node-port
  labels:
    service-name: service-node-port
spec: # spec dari service nya
  type: NodePort
  selector: # Pod mana yg akan dipilih oleh service ini
    pod-env: stagging
    pod-name: nginx
  ports:
    - port: 80 # port dari servicenya
      targetPort: 80 # port dari Pod nya (pod nginx)
      nodePort: 32767 # port dari node

---
apiVersion: v1
kind: Service
metadata:
  name: nginx-node-port # nama dari service nya
spec:
  type: NodePort # tipe dari service yg akan dibuat
  selector: # Pod yg akan diselect dan disambungkan ke service ini
    pod-name: nginx
    pod-env: stagging
  ports:
    - port: 80 # port yg akan dibuka oleh Service ini
      targetPort: 80 # port dari Pod yg dipilih. saat mengakses Service ini, maka akan diteruskan ke Pod dengan port ini
      nodePort: 30001 # port dari node yg akan dibuka

# kubectl create -f service-node-port.yaml
