deployment/service.yaml
# create service
apiVersion: v1
kind: Service
metadata:
  name : nginx-service # nama servicenya
spec:
  selector: # untuk menselect pod mana yg masuk ke dalam service ini
    pod-env: stagging
    pod-name: nginx
  ports:
    - port: 8080 # port dari servicenya. servicenya akan mengexpose port 8080
      targetPort: 80 # target port dari Pod, Pod nya mengexpose port berapa
