deployment/sharing-volume.yaml
# create Service
apiVersion: v1
kind: Service
metadata:
  name: app-writer-service
  labels:
    service-name: app-writer-service
spec:
  type: NodePort
  selector:
    pod-name: app-writer
    pod-env: stagging
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30001
    - port: 3000
      targetPort: 3000
