deployment/ingress.yaml
# ingress
# Ingress adalah suatu cara untuk mengexpose Service
# berbeda dengan load balancer atau node port, jika menggunakan Ingress, client hanya butuh tahu satu lokasi IP address ingress
# ketika client melakukan request ke Ingress, pemilihan Service nya ditentukan menggunakan hostname dari request
# Ingress hanya mendukung protocol HTTP, grpc gak bisa

# menjalankan Ingress di minikube
# minikube addons list
# minikube addons enable ingress
# kubectl get pods --namespace kube-system
# kubectl get ingresses

# masalah saat mengexpose Service
# 1. jika menggunakan node port
# maka semua node harus terexpose ke public
# client harus tau semua IP address dari masing-masing node
# 2. jika menggunakan Load Balancer
# maka semua load balancer harus terexpose ke public
# client harus tau semua IP address Load Balancer

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: service-ingress
spec:
  rules:
    - host: sub.domain.com # host yang digunakan untuk mengakses Ingress ini
      http:
        paths:
          - path: /
            pathType: prefix
            backend:
              service:
                name: service-name
                port:
                  number: 80

---
# create service
apiVersion: v1
kind: Service
metadata:
  name: nginx-service # nama Service yg akan dibuat
spec:
  selector: # Pod yg akan dipilih dan dimasukkan ke dalam scope Service ini
    pod-name: nginx
    pod-env: stagging
  ports:
    - port: 80 # port dari Service yg akan dibuka
      targetPort: 80 # port dari Pod yg akan di dalam scope Service ini

---
# create ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress # nama Ingress yg akan dibuat
  labels:
    ingress-name: nginx-ingress
spec:
  rules:
    - host: nginx.reo.local # endpoint DNS yg dibukan oleh Ingress ini
      http:
        paths:
          - path: /nginx1 # endpoint dengan prefix http://nginx.reo.local/nginx1 akan diteruskan ke Service ini
            pathType: prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 80
          - path: /nginx2 # endpoint dengan prefix http://nginx.reo.local.nginx2 aka diteruskan ke Service ini
            pathType: prefix
            backend:
              service:
                name: nginx-service-2
                port:
                  number: 80

---
# kubectl create -f ingress.yaml
